k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskmanager
  namespace: taskmanager
  labels:
    app: taskmanager
spec:
  replicas: 1  # Let's use 1 pod until it works
  selector:
    matchLabels:
      app: taskmanager
  template:
    metadata:
      labels:
        app: taskmanager
    spec:
      containers:
        - name: taskmanager
          image: edkoto/taskmanager-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
