k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskmanager-service
  namespace: taskmanager
  labels:
    app: taskmanager
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
      name: http
  selector:
    app: taskmanager
